# fastapi-pymongo-audit-logs

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
service/: db.py  main.py  schemas.py  worker.py
service/api/: __init__.py  health.py
service/api/v1/: routes.py  services.py  tasks.py
service/core/: config.py
